logs/goephor.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/GitPython-2.0.2.dist-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.10.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/git'...
Listing './lib/python3.5/site-packages/git/index'...
Listing './lib/python3.5/site-packages/git/objects'...
Listing './lib/python3.5/site-packages/git/objects/submodule'...
Listing './lib/python3.5/site-packages/git/refs'...
Listing './lib/python3.5/site-packages/git/repo'...
Listing './lib/python3.5/site-packages/git/test'...
Listing './lib/python3.5/site-packages/git/test/fixtures'...
Listing './lib/python3.5/site-packages/git/test/lib'...
Listing './lib/python3.5/site-packages/git/test/performance'...
Listing './lib/python3.5/site-packages/gitdb'...
Listing './lib/python3.5/site-packages/gitdb/db'...
Listing './lib/python3.5/site-packages/gitdb/test'...
Listing './lib/python3.5/site-packages/gitdb/utils'...
Listing './lib/python3.5/site-packages/gitdb-0.6.4.egg-info'...
Listing './lib/python3.5/site-packages/goephor'...
Compiling './lib/python3.5/site-packages/goephor/__main__.py'...
***   File "./lib/python3.5/site-packages/goephor/__main__.py", line 70
    print "\n[remove] @ %s\n" % debug_log
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/goephor/core'...
Compiling './lib/python3.5/site-packages/goephor/core/Chain.py'...
***   File "./lib/python3.5/site-packages/goephor/core/Chain.py", line 74
    print "[Error] file @ %s" % (config_file)
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/goephor/core/plugins'...
Compiling './lib/python3.5/site-packages/goephor/core/plugins/condition.py'...
***   File "./lib/python3.5/site-packages/goephor/core/plugins/condition.py", line 66
    print message('header',"\n[eval] %s" % statem,debug=self.debug)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/goephor/core/plugins/environment.py'...
***   File "./lib/python3.5/site-packages/goephor/core/plugins/environment.py", line 41
    print message('info',"[set] %s=%s" % (key, value),debug=self.debug)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/goephor/core/plugins/example.py'...
***   File "./lib/python3.5/site-packages/goephor/core/plugins/example.py", line 38
    print message('info',"This var [%s] was passed in " % var1,debug=self.debug)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/goephor/core/plugins/freebsd.py'...
***   File "./lib/python3.5/site-packages/goephor/core/plugins/freebsd.py", line 49
    print message('info',str(jail_line),debug=self.debug)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/goephor/core/plugins/handler.py'...
***   File "./lib/python3.5/site-packages/goephor/core/plugins/handler.py", line 37
    print "[read] @ %s" % (path)
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/goephor/core/plugins/http.py'...
***   File "./lib/python3.5/site-packages/goephor/core/plugins/http.py", line 53
    print message('info',"[send] %s @ %s/%s" % (req_type,base_url,url_ext),debug=self.debug)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/goephor/core/plugins/modules'...
Compiling './lib/python3.5/site-packages/goephor/core/plugins/modules/action.py'...
***   File "./lib/python3.5/site-packages/goephor/core/plugins/modules/action.py", line 194
    print message(message_type,"\n\n[%s]\n" % title,debug=self.debug)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/goephor/core/plugins/modules/environment.py'...
***   File "./lib/python3.5/site-packages/goephor/core/plugins/modules/environment.py", line 39
    print '[set] %s=%s' % (key, value)
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/goephor/core/plugins/modules/git_kit.py'...
***   File "./lib/python3.5/site-packages/goephor/core/plugins/modules/git_kit.py", line 42
    print "[Info] adding host @ %s" % (ssh_config)
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/goephor/core/plugins/modules/remote.py'...
***   File "./lib/python3.5/site-packages/goephor/core/plugins/modules/remote.py", line 42
    print "\n[Error] unable to ping host %s" % (self.server)
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/goephor/core/plugins/modules/terminal.py'...
***   File "./lib/python3.5/site-packages/goephor/core/plugins/modules/terminal.py", line 46
    print output
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/goephor/core/plugins/receipt.py'...
***   File "./lib/python3.5/site-packages/goephor/core/plugins/receipt.py", line 54
    print message('info',"[on_actions] %s" % (path),debug=self.debug)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/goephor/core/plugins/release.py'...
***   File "./lib/python3.5/site-packages/goephor/core/plugins/release.py", line 39
    print message('info',"[date] %s" % (str(date)),debug=self.debug)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/goephor/core/plugins/scm.py'...
***   File "./lib/python3.5/site-packages/goephor/core/plugins/scm.py", line 49
    print message('info',"[latest_commit] %s is %s" % (info_type,latest),debug=self.debug)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/goephor/core/plugins/string.py'...
***   File "./lib/python3.5/site-packages/goephor/core/plugins/string.py", line 37
    print message(msg_type,"%s" % (text),debug=self.debug)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/goephor/core/plugins/system.py'...
***   File "./lib/python3.5/site-packages/goephor/core/plugins/system.py", line 42
    print message('info',"[include] @ %s" % file,debug=self.debug)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/goephor-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/smmap'...
Listing './lib/python3.5/site-packages/smmap/test'...
Listing './lib/python3.5/site-packages/smmap-0.9.0.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
